--- a/src/lib/i18n/locales/pt-BR/translation.json
+++ b/src/lib/i18n/locales/pt-BR/translation.json
@@ -221,7 +221,7 @@
 	"Embedding model set to \"{{embedding_model}}\"": "Modelo de Embedding definido como \"{{embedding_model}}\"",
 	"Enable Chat History": "Ativar Histórico de Bate-papo",
 	"Enable Community Sharing": "Habilitar o compartilhamento da comunidade",
-	"Enable message bad Words replacement": "",
+	"Enable Message Bad Words Replacement": "",
 	"Enable Message Filter": "",
 	"Enable New Sign Ups": "Ativar Novas Inscrições",
 	"Enable Web Search": "Habilitar a Pesquisa na Web",
