--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -222,9 +222,10 @@
 	"Enable Base64": "允许启用Base64上传文件模式",
 	"Enable Chat History": "启用对话历史记录",
 	"Enable Community Sharing": "启用分享至社区",
+	"Enable Daily Usages Notice": "启用每日使用通知",
 	"Enable File-Update Base64": "启用Base64上传文件",
-	"Enable message bad Words replacement": "启用消息中敏感词替换",
-	"Enable message bad Words wechat notice": "启用消息中敏感词企业微信通知",
+	"Enable Message Bad Words Replacement": "启用消息中敏感词替换",
+	"Enable Message Bad Words wechat Notice": "启用消息中敏感词企业微信通知",
 	"Enable Message Filter": "启用消息过滤器",
 	"Enable New Sign Ups": "允许新用户注册",
 	"Enable Web Search": "启用网络搜索",
@@ -708,6 +709,7 @@
 	"WebUI Settings": "WebUI 设置",
 	"WebUI will make requests to": "WebUI 将请求",
 	"Wechat App Secret": "企业微信机器人密钥",
+	"Wechat Notice Suffix": "企业微信机器人通知后缀",
 	"What’s New in": "最近更新内容于",
 	"When history is turned off, new chats on this browser won't appear in your history on any of your devices.": "当关闭历史记录功能时，在此浏览器上新的对话记录将不会同步到您其他设备的历史记录中。",
 	"Whisper (Local)": "Whisper (本地)",
