--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -222,9 +222,10 @@
 	"Enable Base64": "允许啟用Base64上傳檔案模式",
 	"Enable Chat History": "啟用聊天紀錄",
 	"Enable Community Sharing": "啟用社群分享",
+	"Enable Daily Usages Notice": "啟用每日使用通知",
 	"Enable File-Update Base64": "啟用Base64上傳檔案",
-	"Enable message bad Words replacement": "啟用消息壞詞替換",
-	"Enable message bad Words wechat notice": "啟用消息壞詞企业微信通知",
+	"Enable Message Bad Words Replacement": "啟用消息壞詞替換",
+	"Enable Message Bad Words wechat Notice": "啟用消息壞詞企业微信通知",
 	"Enable Message Filter": "啟用消息過濾器",
 	"Enable New Sign Ups": "允許註冊新帳號",
 	"Enable Web Search": "啟用網頁搜尋",
@@ -707,6 +708,7 @@
 	"WebUI Settings": "WebUI 設定",
 	"WebUI will make requests to": "WebUI 將會存取",
 	"Wechat App Secret": "企业微信机器人密钥",
+	"Wechat Notice Suffix": "企业微信机器人通知后缀",
 	"What’s New in": "全新內容",
 	"When history is turned off, new chats on this browser won't appear in your history on any of your devices.": "當歷史被關閉時，這個瀏覽器上的新聊天將不會出現在任何裝置的歷史記錄中",
 	"Whisper (Local)": "Whisper（本地）",
