--- a/src/lib/i18n/locales/dg-DG/translation.json
+++ b/src/lib/i18n/locales/dg-DG/translation.json
@@ -220,7 +220,7 @@
 	"Embedding model set to \"{{embedding_model}}\"": "",
 	"Enable Chat History": "Activate Chat Story",
 	"Enable Community Sharing": "",
-	"Enable message bad Words replacement": "",
+	"Enable Message Bad Words Replacement": "",
 	"Enable Message Filter": "",
 	"Enable New Sign Ups": "Enable New Bark Ups",
 	"Enable Web Search": "",
