--- a/src/lib/i18n/locales/en-GB/translation.json
+++ b/src/lib/i18n/locales/en-GB/translation.json
@@ -219,7 +219,7 @@
 	"Embedding model set to \"{{embedding_model}}\"": "",
 	"Enable Chat History": "",
 	"Enable Community Sharing": "",
-	"Enable message bad Words replacement": "",
+	"Enable Message Bad Words Replacement": "",
 	"Enable Message Filter": "",
 	"Enable New Sign Ups": "",
 	"Enable Web Search": "",
