--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -489,6 +489,7 @@
 	"Pull \"{{searchValue}}\" from Ollama.com": "从 Ollama.com 拉取 \"{{searchValue}}\"",
 	"Pull a model from Ollama.com": "从 Ollama.com 拉取一个模型",
 	"Query Params": "查询参数",
+	"Random Chat Background Image": "随机对话背景图片",
 	"RAG Template": "RAG 提示词模板",
 	"Read Aloud": "朗读",
 	"Record voice": "录音",
