--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -489,6 +489,7 @@
 	"Pull \"{{searchValue}}\" from Ollama.com": "從 Ollama.com 下載 \"{{searchValue}}\"",
 	"Pull a model from Ollama.com": "從 Ollama.com 下載模型",
 	"Query Params": "查詢參數",
+	"Random Chat Background Image": "隨機聊天背景圖片",
 	"RAG Template": "RAG 範例",
 	"Read Aloud": "讀出",
 	"Record voice": "錄音",
