--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -238,6 +238,8 @@
 	"Enter Google PSE Engine Id": "ใส่รหัสเครื่องยนต์ของ Google PSE",
 	"Enter Image Size (e.g. 512x512)": "ใส่ขนาดภาพ (เช่น 512x512)",
 	"Enter language codes": "ใส่รหัสภาษา",
+	"Enter Max File Count": "",
+	"Enter Max File Size(MB)": "",
 	"Enter model tag (e.g. {{modelTag}})": "ใส่แท็กโมเดล (เช่น {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "ใส่จำนวนขั้นตอน (เช่น 50)",
 	"Enter Score": "ใส่คะแนน",
@@ -278,6 +280,7 @@
 	"File": "ไฟล์",
 	"File Mode": "โหมดไฟล์",
 	"File not found.": "ไม่พบไฟล์",
+	"File size exceeds the limit of {{size}}MB": "",
 	"Files": "ไฟล์",
 	"Filter is now globally disabled": "การกรองถูกปิดใช้งานทั่วโลกแล้ว",
 	"Filter is now globally enabled": "การกรองถูกเปิดใช้งานทั่วโลกแล้ว",
@@ -365,6 +368,8 @@
 	"Manage Ollama Models": "จัดการโมเดล Ollama",
 	"Manage Pipelines": "จัดการไปป์ไลน์",
 	"March": "มีนาคม",
+	"Max File Count": "",
+	"Max File Size(MB)": "",
 	"Max Tokens (num_predict)": "โทเค็นสูงสุด (num_predict)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "สามารถดาวน์โหลดโมเดลได้สูงสุด 3 โมเดลในเวลาเดียวกัน โปรดลองอีกครั้งในภายหลัง",
 	"May": "พฤษภาคม",
