💄 Limit the size and number of uploaded files

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -238,6 +238,8 @@
 	"Enter Google PSE Engine Id": "Geben Sie die Google PSE-Engine-ID ein",
 	"Enter Image Size (e.g. 512x512)": "Geben Sie die Bildgröße ein (z. B. 512x512)",
 	"Enter language codes": "Geben Sie die Sprachcodes ein",
+	"Enter Max File Count": "",
+	"Enter Max File Size(MB)": "",
 	"Enter model tag (e.g. {{modelTag}})": "Gebn Sie den Model-Tag ein",
 	"Enter Number of Steps (e.g. 50)": "Geben Sie die Anzahl an Schritten ein (z. B. 50)",
 	"Enter Score": "Punktzahl eingeben",
@@ -278,6 +280,7 @@
 	"File": "Datei",
 	"File Mode": "Datei-Modus",
 	"File not found.": "Datei nicht gefunden.",
+	"File size exceeds the limit of {{size}}MB": "",
 	"Files": "",
 	"Filter is now globally disabled": "Filter ist jetzt global deaktiviert",
 	"Filter is now globally enabled": "Filter ist jetzt global aktiviert",
@@ -366,6 +369,8 @@
 	"Manage Pipelines": "Pipelines verwalten",
 	"Manage Valves": "Valves verwalten",
 	"March": "März",
+	"Max File Count": "",
+	"Max File Size(MB)": "",
 	"Max Tokens (num_predict)": "Maximale Tokenanzahl (num_predict)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "Es können maximal 3 Modelle gleichzeitig heruntergeladen werden. Bitte versuchen Sie es später erneut.",
 	"May": "Mai",
