--- a/src/lib/i18n/locales/hi-IN/translation.json
+++ b/src/lib/i18n/locales/hi-IN/translation.json
@@ -238,6 +238,8 @@
 	"Enter Google PSE Engine Id": "Google PSE इंजन आईडी दर्ज करें",
 	"Enter Image Size (e.g. 512x512)": "छवि का आकार दर्ज करें (उदा. 512x512)",
 	"Enter language codes": "भाषा कोड दर्ज करें",
+	"Enter Max File Count": "",
+	"Enter Max File Size(MB)": "",
 	"Enter model tag (e.g. {{modelTag}})": "Model tag दर्ज करें (उदा. {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "चरणों की संख्या दर्ज करें (उदा. 50)",
 	"Enter Score": "स्कोर दर्ज करें",
@@ -278,6 +280,7 @@
 	"File": "",
 	"File Mode": "फ़ाइल मोड",
 	"File not found.": "फ़ाइल प्राप्त नहीं हुई।",
+	"File size exceeds the limit of {{size}}MB": "",
 	"Files": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
@@ -366,6 +369,8 @@
 	"Manage Pipelines": "पाइपलाइनों का प्रबंधन करें",
 	"Manage Valves": "",
 	"March": "मार्च",
+	"Max File Count": "",
+	"Max File Size(MB)": "",
 	"Max Tokens (num_predict)": "अधिकतम टोकन (num_predict)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "अधिकतम 3 मॉडल एक साथ डाउनलोड किये जा सकते हैं। कृपया बाद में पुन: प्रयास करें।",
 	"May": "मेई",
