--- a/src/lib/i18n/locales/nb-NO/translation.json
+++ b/src/lib/i18n/locales/nb-NO/translation.json
@@ -238,6 +238,8 @@
 	"Enter Google PSE Engine Id": "Skriv inn Google PSE Motor-ID",
 	"Enter Image Size (e.g. 512x512)": "Skriv inn bildestørrelse (f.eks. 512x512)",
 	"Enter language codes": "Skriv inn språkkoder",
+	"Enter Max File Count": "",
+	"Enter Max File Size(MB)": "",
 	"Enter model tag (e.g. {{modelTag}})": "Skriv inn modelltag (f.eks. {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "Skriv inn antall steg (f.eks. 50)",
 	"Enter Score": "Skriv inn poengsum",
@@ -278,6 +280,7 @@
 	"File": "Fil",
 	"File Mode": "Filmodus",
 	"File not found.": "Fil ikke funnet.",
+	"File size exceeds the limit of {{size}}MB": "",
 	"Files": "Filer",
 	"Filter is now globally disabled": "Filteret er nå deaktivert på systemnivå",
 	"Filter is now globally enabled": "Filteret er nå aktivert på systemnivå",
@@ -366,6 +369,8 @@
 	"Manage Pipelines": "Administrer pipelines",
 	"Manage Valves": "Administrer valves",
 	"March": "mars",
+	"Max File Count": "",
+	"Max File Size(MB)": "",
 	"Max Tokens (num_predict)": "Maks antall tokens (num_predict)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "Maksimalt 3 modeller kan lastes ned samtidig. Vennligst prøv igjen senere.",
 	"May": "mai",
