--- a/src/lib/i18n/locales/pt-BR/translation.json
+++ b/src/lib/i18n/locales/pt-BR/translation.json
@@ -238,6 +238,8 @@
 	"Enter Google PSE Engine Id": "Digite o ID do Motor do Google PSE",
 	"Enter Image Size (e.g. 512x512)": "Digite o Tamanho da Imagem (por exemplo, 512x512)",
 	"Enter language codes": "Digite os códigos de idioma",
+	"Enter Max File Count": "",
+	"Enter Max File Size(MB)": "",
 	"Enter model tag (e.g. {{modelTag}})": "Digite a tag do modelo (por exemplo, {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "Digite o Número de Passos (por exemplo, 50)",
 	"Enter Score": "Digite a Pontuação",
@@ -278,6 +280,7 @@
 	"File": "Arquivo",
 	"File Mode": "Modo de Arquivo",
 	"File not found.": "Arquivo não encontrado.",
+	"File size exceeds the limit of {{size}}MB": "",
 	"Files": "Arquivos",
 	"Filter is now globally disabled": "O filtro está agora desativado globalmente",
 	"Filter is now globally enabled": "O filtro está agora ativado globalmente",
@@ -366,6 +369,8 @@
 	"Manage Pipelines": "Gerenciar Pipelines",
 	"Manage Valves": "Gerenciar Válvulas",
 	"March": "Março",
+	"Max File Count": "",
+	"Max File Size(MB)": "",
 	"Max Tokens (num_predict)": "Máximo de Tokens (num_predict)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "Máximo de 3 modelos podem ser baixados simultaneamente. Por favor, tente novamente mais tarde.",
 	"May": "Maio",
