--- a/src/lib/i18n/locales/it-IT/translation.json
+++ b/src/lib/i18n/locales/it-IT/translation.json
@@ -238,6 +238,8 @@
 	"Enter Google PSE Engine Id": "Inserisci l'ID motore PSE di Google",
 	"Enter Image Size (e.g. 512x512)": "Inserisci la dimensione dell'immagine (ad esempio 512x512)",
 	"Enter language codes": "Inserisci i codici lingua",
+	"Enter Max File Count": "",
+	"Enter Max File Size(MB)": "",
 	"Enter model tag (e.g. {{modelTag}})": "Inserisci il tag del modello (ad esempio {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "Inserisci il numero di passaggi (ad esempio 50)",
 	"Enter Score": "Inserisci il punteggio",
@@ -278,6 +280,7 @@
 	"File": "",
 	"File Mode": "Modalità file",
 	"File not found.": "File non trovato.",
+	"File size exceeds the limit of {{size}}MB": "",
 	"Files": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
@@ -366,6 +369,8 @@
 	"Manage Pipelines": "Gestire le pipeline",
 	"Manage Valves": "",
 	"March": "Marzo",
+	"Max File Count": "",
+	"Max File Size(MB)": "",
 	"Max Tokens (num_predict)": "Numero massimo di gettoni (num_predict)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "È possibile scaricare un massimo di 3 modelli contemporaneamente. Riprova più tardi.",
 	"May": "Maggio",
