--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -238,6 +238,8 @@
 	"Enter Google PSE Engine Id": "Nhập Google PSE Engine Id",
 	"Enter Image Size (e.g. 512x512)": "Nhập Kích thước ảnh (vd: 512x512)",
 	"Enter language codes": "Nhập mã ngôn ngữ",
+	"Enter Max File Count": "",
+	"Enter Max File Size(MB)": "",
 	"Enter model tag (e.g. {{modelTag}})": "Nhập thẻ mô hình (vd: {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "Nhập số Steps (vd: 50)",
 	"Enter Score": "Nhập Score",
@@ -278,6 +280,7 @@
 	"File": "Tệp",
 	"File Mode": "Chế độ Tệp văn bản",
 	"File not found.": "Không tìm thấy tệp.",
+	"File size exceeds the limit of {{size}}MB": "",
 	"Files": "Tệp",
 	"Filter is now globally disabled": "Bộ lọc hiện đã bị vô hiệu hóa trên toàn hệ thống",
 	"Filter is now globally enabled": "Bộ lọc hiện được kích hoạt trên toàn hệ thống",
@@ -366,6 +369,8 @@
 	"Manage Pipelines": "Quản lý Pipelines",
 	"Manage Valves": "Quản lý Valves",
 	"March": "Tháng 3",
+	"Max File Count": "",
+	"Max File Size(MB)": "",
 	"Max Tokens (num_predict)": "Tokens tối đa (num_predict)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "Tối đa 3 mô hình có thể được tải xuống cùng lúc. Vui lòng thử lại sau.",
 	"May": "Tháng 5",
