--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -238,6 +238,8 @@
 	"Enter Google PSE Engine Id": "輸入 Google PSE 引擎 ID",
 	"Enter Image Size (e.g. 512x512)": "輸入圖片大小（例如 512x512）",
 	"Enter language codes": "輸入語言代碼",
+	"Enter Max File Count": "",
+	"Enter Max File Size(MB)": "",
 	"Enter model tag (e.g. {{modelTag}})": "輸入模型標籤（例如 {{modelTag}}）",
 	"Enter Number of Steps (e.g. 50)": "輸入步數（例如 50）",
 	"Enter Score": "輸入分數",
@@ -278,6 +280,7 @@
 	"File": "檔案",
 	"File Mode": "檔案模式",
 	"File not found.": "找不到檔案。",
+	"File size exceeds the limit of {{size}}MB": "",
 	"Files": "",
 	"Filter is now globally disabled": "",
 	"Filter is now globally enabled": "",
@@ -366,6 +369,8 @@
 	"Manage Pipelines": "管理管線",
 	"Manage Valves": "",
 	"March": "3 月",
+	"Max File Count": "",
+	"Max File Size(MB)": "",
 	"Max Tokens (num_predict)": "最大 Token（num_predict）",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "最多可以同時下載 3 個模型。請稍後再試。",
 	"May": "5 月",
