--- a/src/lib/i18n/locales/ro-RO/translation.json
+++ b/src/lib/i18n/locales/ro-RO/translation.json
@@ -238,6 +238,8 @@
 	"Enter Google PSE Engine Id": "Introduceți ID-ul Motorului Google PSE",
 	"Enter Image Size (e.g. 512x512)": "Introduceți Dimensiunea Imaginii (de ex. 512x512)",
 	"Enter language codes": "Introduceți codurile limbilor",
+	"Enter Max File Count": "",
+	"Enter Max File Size(MB)": "",
 	"Enter model tag (e.g. {{modelTag}})": "Introduceți eticheta modelului (de ex. {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "Introduceți Numărul de Pași (de ex. 50)",
 	"Enter Score": "Introduceți Scorul",
@@ -278,6 +280,7 @@
 	"File": "Fișier",
 	"File Mode": "Mod Fișier",
 	"File not found.": "Fișierul nu a fost găsit.",
+	"File size exceeds the limit of {{size}}MB": "",
 	"Files": "Fișiere",
 	"Filter is now globally disabled": "Filtrul este acum dezactivat global",
 	"Filter is now globally enabled": "Filtrul este acum activat global",
@@ -365,6 +368,8 @@
 	"Manage Ollama Models": "Gestionează Modelele Ollama",
 	"Manage Pipelines": "Gestionează Conductele",
 	"March": "Martie",
+	"Max File Count": "",
+	"Max File Size(MB)": "",
 	"Max Tokens (num_predict)": "Număr Maxim de Tokeni (num_predict)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "Maxim 3 modele pot fi descărcate simultan. Vă rugăm să încercați din nou mai târziu.",
 	"May": "Mai",
