Updated ms-MY Malay (Bahasa Malaysia) Language

--- a/src/lib/i18n/locales/ms-MY/translation.json
+++ b/src/lib/i18n/locales/ms-MY/translation.json
@@ -206,7 +206,7 @@
 	"Download canceled": "Muat Turun dibatalkan",
 	"Download Database": "Muat turun Pangkalan Data",
 	"Drop any files here to add to the conversation": "Letakkan mana-mana fail di sini untuk ditambahkan pada perbualan",
-	"e.g. '30s','10m'. Valid time units are 's', 'm', 'h'.": "cth '30s','10m'. Unit masa yang sah ialah 's', 'm', 'h'.": "",
+	"e.g. '30s','10m'. Valid time units are 's', 'm', 'h'.": "cth '30s','10m'. Unit masa yang sah ialah 's', 'm', 'h'.",
 	"Edit": "Edit",
 	"Edit Doc": "Edit Dokumen",
 	"Edit Memory": "Edit Memori",
