Updated ms-MY Malay (Bahasa Malaysia)

--- a/src/lib/i18n/locales/ms-MY/translation.json
+++ b/src/lib/i18n/locales/ms-MY/translation.json
@@ -631,9 +631,9 @@
 	"Toolkit ID (e.g. my_toolkit)": "ID Kit Alatan (cth my_toolkit)",
 	"Toolkit Name (e.g. My ToolKit)": "Nama Kit Alatan (cth My ToolKit)",
 	"Tools": "Alatan",
-	"Tools are a function calling system with arbitrary code execution": "",
-	"Tools have a function calling system that allows arbitrary code execution": "",
-	"Tools have a function calling system that allows arbitrary code execution.": "",
+	"Tools are a function calling system with arbitrary code execution": "Alatan ialah sistem panggilan fungsi dengan pelaksanaan kod sewenang-wenangnya",
+	"Tools have a function calling system that allows arbitrary code execution": "Alatan mempunyai sistem panggilan fungsi yang membolehkan pelaksanaan kod sewenang-wenangnya",
+	"Tools have a function calling system that allows arbitrary code execution.": "Alatan mempunyai sistem panggilan fungsi yang membolehkan pelaksanaan kod sewenang-wenangnya.",
 	"Top K": "'Top K'",
 	"Top P": "'Top P'",
 	"Trouble accessing Ollama?": "Masalah mengakses Ollama?",
