Updated ms-MY Malay (Bahasa Malaysia) Language

--- a/src/lib/i18n/locales/ms-MY/translation.json
+++ b/src/lib/i18n/locales/ms-MY/translation.json
@@ -15,6 +15,7 @@
 	"Account": "Akaun",
 	"Account Activation Pending": "Pengaktifan Akaun belum selesai",
 	"Accurate information": "Informasi tepat",
+	"Actions": "Tindakan",
 	"Active Users": "Pengguna Aktif",
 	"Add": "Tambah",
 	"Add a model id": "Tambah id model",
@@ -27,7 +28,8 @@
 	"Add Memory": "Tambah Memori",
 	"Add message": "Tambah Mesej",
 	"Add Model": "Tambah Model",
-	"Add Tags": "Tambah tag",
+	"Add Tag": "Tambah Tag",
+	"Add Tags": "Tambah Tag",
 	"Add User": "Tambah Pengguna",
 	"Adjusting these settings will apply changes universally to all users.": "Melaraskan tetapan ini akan menggunakan perubahan secara universal kepada semua pengguna.",
 	"admin": "pentadbir",
@@ -168,6 +170,7 @@
 	"Delete chat": "Padam perbualan",
 	"Delete Chat": "Padam Perbualan",
 	"Delete chat?": "Padam perbualan?",
+	"Delete Doc": "Padam Dokumen",
 	"Delete function?": "Padam fungsi?",
 	"Delete prompt?": "Padam Gesaan?",
 	"delete this link": "Padam pautan ini?",
@@ -211,6 +214,7 @@
 	"Edit Doc": "Edit Dokumen",
 	"Edit Memory": "Edit Memori",
 	"Edit User": "Edit Penggunal",
+	"ElevenLabs": "ElevenLabs",
 	"Email": "E-mel",
 	"Embedding Batch Size": "Membenamkan Saiz Kelompok",
 	"Embedding Model": "Model Benamkan",
@@ -360,7 +364,6 @@
 	"Manage Models": "Urus Model",
 	"Manage Ollama Models": "Urus Model Ollama",
 	"Manage Pipelines": "Urus 'Pipelines'",
-	"Manage Valves": "Urus 'Valves'",
 	"March": "Mac",
 	"Max Tokens (num_predict)": "Token Maksimum ( num_predict )",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "Maksimum 3 model boleh dimuat turun serentak. Sila cuba sebentar lagi.",
@@ -372,6 +375,7 @@
 	"Memory deleted successfully": "Memori berjaya dihapuskan",
 	"Memory updated successfully": "Memori berjaya dikemaskini",
 	"Messages you send after creating your link won't be shared. Users with the URL will be able to view the shared chat.": "Mesej yang anda hantar selepas membuat pautan anda tidak akan dikongsi. Pengguna dengan URL akan dapat melihat perbualan yang dikongsi.",
+	"Min P": "P Minimum",
 	"Minimum Score": "Skor Minimum",
 	"Mirostat": "Mirostat",
 	"Mirostat Eta": "Mirostat Eta",
@@ -500,6 +504,7 @@
 	"Save": "Simpan",
 	"Save & Create": "Simpan & Cipta",
 	"Save & Update": "Simpan & Kemas Kini",
+	"Save Tag": "Simpan Tag",
 	"Saving chat logs directly to your browser's storage is no longer supported. Please take a moment to download and delete your chat logs by clicking the button below. Don't worry, you can easily re-import your chat logs to the backend through": "Penyimpanan log perbualan terus ke storan pelayan web anda tidak lagi disokong. Sila luangkan sedikit masa untuk memuat turun dan memadam log perbualan anda dengan mengklik butang di bawah. Jangan risau, anda boleh mengimport semula log perbualan anda dengan mudah melalui 'backend'",
 	"Scan": "Imbas",
 	"Scan complete!": "Imbasan selesai!",
@@ -617,6 +622,7 @@
 	"To access the WebUI, please reach out to the administrator. Admins can manage user statuses from the Admin Panel.": "Untuk mengakses WebUI , sila hubungi pentadbir. Pentadbir boleh menguruskan status pengguna daripada Panel Pentadbiran",
 	"To add documents here, upload them to the \"Documents\" workspace first.": "Untuk menambah dokumen di sini, muat naiknya ke ruang kerja \"Documents\" dahulu.",
 	"to chat input.": "untuk input perbualan.",
+	"To select actions here, add them to the \"Functions\" workspace first.": "Untuk memilih tindakan di sini, tambahkannya pada ruang kerja \"Functions\" dahulu.",
 	"To select filters here, add them to the \"Functions\" workspace first.": "Untuk memilih tapisan di sini, tambahkannya pada ruang kerja \"Functions\" dahulu.",
 	"To select toolkits here, add them to the \"Tools\" workspace first.": "Untuk memilih kit alatan di sini, tambahkannya pada ruang kerja \"Tools\" dahulu.",
 	"Today": "Hari Ini",
@@ -645,7 +651,7 @@
 	"Uh-oh! There was an issue connecting to {{provider}}.": "Maaf! Terdapat masalah menyambung ke {{provider}}.",
 	"UI": "UI",
 	"Unknown file type '{{file_type}}'. Proceeding with the file upload anyway.": "Jenis fail tidak diketahui '{{ file_type }}'. Teruskan dengan muat naik fail juga.",
-	"Unpin": "",
+	"Unpin": "Nyahsematkan",
 	"Update": "Kemaskini",
 	"Update and Copy Link": "Kemaskini dan salin pautan",
 	"Update password": "Kemaskini Kata Laluan",
