--- a/src/lib/i18n/locales/ms-MY/translation.json
+++ b/src/lib/i18n/locales/ms-MY/translation.json
@@ -710,5 +710,5 @@
 	"Your account status is currently pending activation.": "Status akaun anda ialah sedang menunggu pengaktifan.",
 	"Your entire contribution will go directly to the plugin developer; Open WebUI does not take any percentage. However, the chosen funding platform might have its own fees.": "Seluruh sumbangan anda akan dihantar terus kepada pembangun 'plugin'; Open WebUI tidak mengambil sebarang peratusan keuntungan daripadanya. Walau bagaimanapun, platform pembiayaan yang dipilih mungkin mempunyai caj tersendiri.",
 	"Youtube": "Youtube",
-	"Youtube Loader Settings": "Tetapan Pemuat Youtube",
+	"Youtube Loader Settings": "Tetapan Pemuat Youtube"
 }
