--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -50,6 +50,7 @@
 	"alphanumeric characters and hyphens": "буквенно цифровые символы и дефисы",
 	"Already have an account?": "у вас уже есть аккаунт?",
 	"an assistant": "ассистент",
+	"An error occurred while processing files.": "",
 	"and": "и",
 	"and create a new shared link.": "и создайте новый общий ссылку.",
 	"API Base URL": "Базовый адрес API",
