--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -50,6 +50,7 @@
 	"alphanumeric characters and hyphens": "英文字母、數字（0~9）和連字元（-）",
 	"Already have an account?": "已經有帳號了嗎？",
 	"an assistant": "助手",
+	"An error occurred while processing files.": "",
 	"and": "和",
 	"and create a new shared link.": "並建立一個新的共享連結。",
 	"API Base URL": "API 基本 URL",
