--- a/src/lib/i18n/locales/dg-DG/translation.json
+++ b/src/lib/i18n/locales/dg-DG/translation.json
@@ -50,6 +50,7 @@
 	"alphanumeric characters and hyphens": "so alpha, many hyphen",
 	"Already have an account?": "Such account exists?",
 	"an assistant": "such assistant",
+	"An error occurred while processing files.": "",
 	"and": "and",
 	"and create a new shared link.": "",
 	"API Base URL": "API Base URL",
